Fix white-space collapsing issue with Safari
It seems to collapse the trailing space with pre-wrap, unlike Firefox or
Chrome. white-space: pre-wrap works in all three.

--- a/packages/core/src/components/ExamQuestionTitle.less
+++ b/packages/core/src/components/ExamQuestionTitle.less
@@ -5,6 +5,6 @@
     width: 4em;
     left: -$width;
     text-align: right;
-    white-space: pre-wrap; // Ensure the trailing space doesn't get collapsed.
+    white-space: pre; // Ensure the trailing space doesn't get collapsed.
   }
 }
